--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Service Workers Example</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="swHandler.js"></script>
   </head>
   <body>
-    <p>test</p>
+    <h1>This will work offfline. This will also have the little icon to download (in the future) the replit talk post is: <a href="https://replit.com/talk/learn/How-to-make-your-website-work-offline-with-Service-Workers/111868">https://replit.com/talk/learn/How-to-make-your-website-work-offline-with-Service-Workers/111868</a> and <a href="https://replit.com/talk/learn/Battle-of-the-workers-Service-workers-vs-Web-workers-what-are-they-and-what-do-they-do/83254">https://replit.com/talk/learn/Battle-of-the-workers-Service-workers-vs-Web-workers-what-are-they-and-what-do-they-do/83254</a></1>
     <!-- Start service worker-->
 <script>
 if("serviceWorker" in navigator){
