--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="sw4.js"></script>
   </head>
   <body>
-    <h1>This will work offfline. The replit talk posts are: <a href="https://replit.com/talk/learn/How-to-make-your-website-work-offline-with-Service-Workers/111868">Blog post #1</a> and <a href="https://replit.com/talk/learn/Battle-of-the-workers-Service-workers-vs-Web-workers-what-are-they-and-what-do-they-do/83254">Blog Post #2</a></h1>
+    <h1>This will work offfline. The replit talk posts are: <a href="https://replit.com/talk/learn/How-to-make-your-website-work-offline-with-Service-Workers/111868">Blog post #1</a> and <a href="https://replit.com/talk/learn/Battle-of-the-workers-Service-workers-vs-Web-workers-what-are-they-and-what-do-they-do/83254">Blog Post #2</a></br>
+    This is open source! Github: <a href="https://github.com/Austin-HTTPS/service-worker-example">https://github.com/Austin-HTTPS/service-worker-example</a>
+    </h1>
       <h4>
       <br><br>Here is a list of all of the JS, HTML, and CSS pages:<br>
       <a href="offline.html">offline.html (sometimes an error will occur when you are offline, this will show)</a></a><br>
