--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="sw4.js"></script>
   </head>
   <body>
-    <h1>This will work offfline. The replit talk posts are: <a href="https://replit.com/talk/learn/How-to-make-your-website-work-offline-with-Service-Workers/111868">Blog post #1</a> and <a href="https://replit.com/talk/learn/Battle-of-the-workers-Service-workers-vs-Web-workers-what-are-they-and-what-do-they-do/83254">Blog Post #2</a></br>
+    <h1>This will work offfline. The replit talk posts that show how to make an offline site are: <a href="https://replit.com/talk/learn/How-to-make-your-website-work-offline-with-Service-Workers/111868">Blog post #1</a> and <a href="https://replit.com/talk/learn/Battle-of-the-workers-Service-workers-vs-Web-workers-what-are-they-and-what-do-they-do/83254">Blog Post #2</a></br>
     This is open source! Github: <a href="https://github.com/Austin-HTTPS/service-worker-example">https://github.com/Austin-HTTPS/service-worker-example</a>
     </h1>
       <h4>
