--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     This is open source! Github: <a href="https://github.com/Austin-HTTPS/service-worker-example">https://github.com/Austin-HTTPS/service-worker-example</a>
     </h1>
       <h4>
-      <br><br>Here is a list of all of the JS, HTML, and CSS pages:<br>
+      <br><br>Here is a list of all of the JS, HTML, and CSS pages that you will need to add:<br>
       <a href="offline.html">offline.html (sometimes an error will occur when you are offline, this will show)</a></a><br>
-      <a href="style.css">style.css</a></a><br>
       <a href="pwa.js">pwa.js</a></a><br>
-      <a href="script.js">script.js</a></a><br>
       <a href="service-worker.js">service-worker.js</a></a><br>
+      <a href="indexhtml">index.html (this page)</a></a><br>
       <a href="sw.js">sw.js</a></a><br>
       <a href="sw2.js">sw2.js</a></a><br>
       <a href="sw3.js">sw3.js</a></a><br>
